syntax = "proto3";

package auth;

option go_package = "./proto-generate;auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GetUIDByToken(GetUIDByTokenRequest) returns (GetUIDByTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc GetUserIdByEmail(GetUserIdByEmailRequest) returns (GetUserIdByEmailResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string message = 1;
  uint32 user_id = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refreshToken = 2;
  uint32 user_id = 3;
}

message GetUIDByTokenRequest {
  string token = 1;
}

message GetUIDByTokenResponse {
  bool isValid = 1;
  uint32 uid = 2;
}

message LogoutRequest {
  uint32 userID = 1;
  string accessToken = 2;
}

message LogoutResponse {
  string message = 1;
}

message RefreshTokenRequest {
  uint32 userID = 1;
  string refreshToken = 2;
}

message RefreshTokenResponse {
  string token = 1;
}

message GetUserIdByEmailRequest {
  string email = 1;
}

message GetUserIdByEmailResponse {
  uint32 user_id = 1;
}

// или для Username
message GetUserIdByUsernameRequest {
  string username = 1;
}

message GetUserIdByUsernameResponse {
  uint32 user_id = 1;
}